--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -1,10 +1,13 @@
 .selected-order {
-    background: linear-gradient(to bottom right, #0e9dea, #144167) !important;
+    background-color: #c3cbdc;
+    background-image: linear-gradient(147deg, #c3cbdc 0%, #edf1f4 74%) !important;
 }
 
 .selected-order:hover,
 .selected-order:focus {
-    background: linear-gradient(to bottom right,  #0e9dea, #144167) !important;
+    /* background: linear-gradient(to bottom right,  #0e9dea, #144167) !important; */
+    background-color: #c3cbdc;
+    background-image: linear-gradient(147deg, #c3cbdc 0%, #edf1f4 74%) !important;
 }
 
 .ListGroup.Item:hover,
@@ -26,4 +29,9 @@
     font-weight: 700;
     font-size: medium;
     margin: 0px 5px 0px 0px;
+}
+
+.top-box {
+    background-color: #dee4ea;
+    background-image: linear-gradient(147deg, #dee4ea 0%, #f9fcff 74%);
 }
